# ctleelab-mpl-utilities

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pixi.toml  pyproject.toml
ctleelab-mpl-utilities/: __init__.py  plot_helpers.py
ctleelab_plothelper/: __init__.py  base-ref.mplstyle  base.mplstyle  dark.mplstyle  dividers.py  light.mplstyle  plothelpers.py  transparent.mplstyle  util.py
devtools/: copyright-precommit-check.sh  copyright.py  copyright.sh
examples/: .pre-commit-config.yaml  demo.py  test_single-plot.py
examples/outputs/: .gitignore
scripts/: strip-base.py
