[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ctleelab_plothelper"

authors = [{ name = "Christopher T. Lee", email = "ctlee@ucsd.edu" }]

description = "Plotting utilities for matplotlib"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["plotting"]

license = { text = "Mozilla Public License 2.0 (MPL 2.0)" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "matplotlib",
    "seaborn"]
dynamic = ["version"]

[tool.hatch]
version.source = "vcs"
version.raw_options.version_scheme = "guess-next-dev"
version.raw_options.local_scheme = "node-and-date"
build.hooks.vcs.version-file = "ctleelab_plothelper/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
ctleelab_plothelper = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
matplotlib = ">=3.10.6,<4"
seaborn = ">=0.13.2,<0.14"
mscorefonts = ">=0.0.1,<0.0.2"
