[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ctleelab_plothelper"

authors = [{ name = "Christopher T. Lee", email = "ctlee@ucsd.edu" }]

description = "Plotting utilities for matplotlib"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["plotting"]

license = { text = "Mozilla Public License 2.0 (MPL 2.0)" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = ["matplotlib"]
dynamic = ["version"]

[tool.hatch]
version.source = "vcs"
version.raw_options.version_scheme = "guess-next-dev"
version.raw_options.local_scheme = "node-and-date"
build.hooks.vcs.version-file = "ctleelab_plothelper/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
ctleelab_plothelper = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
demo = "cd examples; python demo.py"
strip = "python scripts/strip-base.py"

[tool.pixi.dependencies]
matplotlib-base = ">=3.10.6,<4"
mscorefonts = ">=0.0.1,<0.0.2"

[tool.pixi.feature.test.dependencies]
pytest = "*"

# "pixi run tests" will run all files named test_*.py within tests/ directory
[tool.pixi.feature.test.tasks]
tests = "cd examples; pytest"
tests-verbose = "cd examples; pytest -v"

[tool.pytest.ini_options]
testpaths = ["examples"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
